--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/lite"
     tools:context=".screens.settings.SettingsFragment">
 
     <RelativeLayout
         android:id="@+id/tabRelativeLayout"
-        android:layout_margin="24dp"
         android:layout_width="match_parent"
-        android:layout_height="45dp">
+        android:layout_height="45dp"
+        android:layout_margin="24dp">
 
         <TextView
             android:id="@+id/tabTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Settings"
+            android:text="@string/scr_settings_lbl_tab_title"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp" />
 
@@ -39,9 +39,9 @@
         android:id="@+id/profileInfoRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/tabRelativeLayout"
         android:layout_marginStart="26dp"
-        android:layout_marginEnd="26dp"
-        android:layout_below="@+id/tabRelativeLayout">
+        android:layout_marginEnd="26dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/spaceStickImageView"
@@ -59,7 +59,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/spaceStickImageView"
-            android:text="Model:"
+            android:text="@string/scr_settings_lbl_model"
             android:textColor="@color/black"
             android:textSize="24sp" />
 
@@ -70,7 +70,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/modelTextView"
-            android:text="Orion"
+            android:text="@string/scr_stick_lbl_model"
             android:textColor="@color/black"
             android:textSize="24sp" />
 
@@ -78,11 +78,11 @@
             android:id="@+id/batteryTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/modelTextView"
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
-            android:layout_below="@+id/modelTextView"
             android:layout_toEndOf="@+id/spaceStickImageView"
-            android:text="Battery level:"
+            android:text="@string/scr_settings_lbl_battery_level"
             android:textColor="@color/black"
             android:textSize="24sp" />
 
@@ -94,9 +94,9 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             android:layout_toEndOf="@+id/batteryTextView"
+            android:text="100%"
             android:textColor="@color/black"
             android:textSize="24sp"
-            android:text="100%"
             tools:text="100%" />
 
         <TextView
@@ -106,7 +106,7 @@
             android:layout_below="@+id/spaceStickImageView"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
-            android:text="Wifi name:"
+            android:text="@string/scr_settings_lbl_wifi_name"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
@@ -114,10 +114,10 @@
             android:id="@+id/wifiNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/wifiTextView"
             android:layout_below="@+id/spaceStickImageView"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@+id/wifiTextView"
             android:textColor="@color/black"
             android:textSize="20sp"
             tools:text="SpaceStickWiFi" />
@@ -129,7 +129,7 @@
             android:layout_below="@+id/wifiTextView"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
-            android:text="Pattern selected:"
+            android:text="@string/scr_settings_lbl_pattern_selected"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
@@ -137,10 +137,10 @@
             android:id="@+id/patternNumberTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/patternTextView"
             android:layout_below="@+id/wifiTextView"
-            android:layout_marginTop="15dp"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_toEndOf="@+id/patternTextView"
             android:textColor="@color/black"
             android:textSize="20sp"
             tools:text="1" />
@@ -152,15 +152,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/versionTextView"
-        android:layout_marginBottom="50dp"
         android:layout_marginStart="26dp"
         android:layout_marginEnd="26dp"
+        android:layout_marginBottom="50dp"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Advanced settings"
+            android:text="@string/scr_settings_lbl_advanced_settings"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp" />
 
@@ -168,7 +168,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="About us"
+            android:text="@string/scr_settings_lbl_about_us"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp" />
 
@@ -176,7 +176,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Rate us"
+            android:text="@string/scr_settings_lbl_rate_us"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp" />
 
@@ -184,13 +184,13 @@
 
     <TextView
         android:id="@+id/versionTextView"
-        android:textSize="12sp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="24dp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="24dp"
         android:text="Version 1.0 Build №1"
-        tools:text="Version 1.0 Build №10"/>
+        android:textSize="12sp"
+        tools:text="Version 1.0 Build №10" />
 
 </RelativeLayout>
