--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,30 +14,30 @@
         android:layout_height="382dp"
         android:layout_margin="20dp"
         android:src="@drawable/space_stick"
-        tools:ignore="ContentDescription"/>
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/wifi"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_below="@+id/spaceStickImageView"
-        android:layout_toStartOf="@+id/wifiNameTextView"
         android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@+id/wifiNameTextView"
         android:src="@drawable/wifi"
         app:tint="@color/black"
-        tools:ignore="ContentDescription"/>
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/unknownWifi"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_below="@+id/spaceStickImageView"
-        android:layout_toStartOf="@+id/wifiNameTextView"
         android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@+id/wifiNameTextView"
         android:src="@drawable/unknown_wifi"
         android:visibility="gone"
         app:tint="@color/black"
-        tools:ignore="ContentDescription"/>
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/wifiOff"
@@ -49,7 +49,7 @@
         android:src="@drawable/wifi_off"
         android:visibility="gone"
         app:tint="@color/black"
-        tools:ignore="ContentDescription"/>
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/wifiNameTextView"
@@ -57,42 +57,42 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/spaceStickImageView"
         android:layout_centerHorizontal="true"
-        android:textSize="26sp"
         android:textColor="@color/colorAccent"
-        tools:text="SpaceStickWifi"/>
+        android:textSize="26sp"
+        tools:text="SpaceStickWifi" />
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="154dp"
         android:layout_height="154dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:layout_below="@+id/wifiNameTextView"
+        android:layout_marginBottom="50dp"
+        android:backgroundTint="@color/colorPrimary"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
         android:insetBottom="0dp"
-        android:backgroundTint="@color/colorPrimary"
-        app:iconSize="24dp"
         app:iconPadding="0dp"
+        app:iconSize="24dp"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded">
+
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/checkConnectionButton"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:text="Connect"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
-            app:strokeColor="@color/white"
-            app:strokeWidth="2dp"
-            app:iconSize="24dp"
+            android:text="@string/scr_main_lbl_connect"
             app:iconPadding="0dp"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"/>
+            app:iconSize="24dp"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
+            app:strokeColor="@color/white"
+            app:strokeWidth="2dp" />
 
     </com.google.android.material.card.MaterialCardView>
-
-
 </RelativeLayout>
