--- a/app/src/main/res/layout/item_stick_pattern.xml
+++ b/app/src/main/res/layout/item_stick_pattern.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="5dp"
     app:cardBackgroundColor="@color/colorPrimary"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="12dp">
-    
+    app:cardCornerRadius="12dp"
+    app:cardElevation="0dp">
+
     <RelativeLayout
         android:layout_width="96dp"
         android:layout_height="96dp">
@@ -24,5 +23,4 @@
             tools:ignore="ContentDescription" />
 
     </RelativeLayout>
-
 </androidx.cardview.widget.CardView>
