GridView replaced by RecyclerView, code style refactoring

--- a/app/src/main/res/layout/fragment_pattern_settings.xml
+++ b/app/src/main/res/layout/fragment_pattern_settings.xml
@@ -32,34 +32,33 @@
             android:src="@drawable/arrow_back"
             app:tint="@color/colorPrimary"
             tools:ignore="ContentDescription" />
-
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/chartInfoRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_below="@+id/tab"
         android:layout_marginStart="26dp"
-        android:layout_marginEnd="26dp"
-        android:layout_below="@+id/tab">
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="26dp">
 
         <TextView
             android:id="@+id/chartLegendTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:text="Chart legend:"
             android:textColor="@color/colorPrimary"
-            android:text="Chart legend:"/>
+            android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/sinImageView"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_marginStart="20dp"
             android:layout_centerVertical="true"
-            android:padding="4dp"
+            android:layout_marginStart="20dp"
             android:layout_toEndOf="@+id/chartLegendTextView"
+            android:padding="4dp"
             android:src="@drawable/shape_circle"
             app:tint="@color/red"
             tools:ignore="ContentDescription" />
@@ -70,18 +69,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:layout_toEndOf="@+id/sinImageView"
+            android:text="Sine"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:text="Sine"/>
+            android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/cosImageView"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_marginStart="20dp"
             android:layout_centerVertical="true"
-            android:padding="4dp"
+            android:layout_marginStart="20dp"
             android:layout_toEndOf="@+id/sinTextView"
+            android:padding="4dp"
             android:src="@drawable/shape_circle"
             app:tint="@color/blue"
             tools:ignore="ContentDescription" />
@@ -92,10 +91,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:layout_toEndOf="@+id/cosImageView"
+            android:text="Cosine"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:text="Cosine"/>
-
+            android:textSize="18sp" />
     </RelativeLayout>
 
     <com.jjoe64.graphview.GraphView
@@ -104,25 +102,25 @@
         android:layout_height="200dip"
         android:layout_below="@+id/chartInfoRelativeLayout"
         android:layout_marginStart="26dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="26dp" />
 
     <RelativeLayout
         android:id="@+id/paramsRekativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/graphView"
-        android:layout_marginTop="30dp"
         android:layout_marginStart="26dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="26dp">
 
         <TextView
             android:id="@+id/paramsTitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Parameters"
             android:textColor="@color/black"
-            android:textSize="22sp"
-            android:text="Parameters"/>
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/brightnessTextView"
@@ -130,9 +128,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/paramsTitleTextView"
             android:layout_marginTop="10dp"
-            android:textSize="18sp"
+            android:text="Sine"
             android:textColor="@color/black"
-            android:text="Sine"/>
+            android:textSize="18sp" />
 
         <SeekBar
             android:id="@+id/brightnessSeekBar"
@@ -141,17 +139,17 @@
             android:layout_below="@+id/brightnessTextView"
             android:layout_marginTop="5dp"
             android:max="254"
-            android:progress="51"/>
+            android:progress="51" />
 
         <TextView
             android:id="@+id/speedTextView"
-            android:layout_below="@+id/brightnessSeekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/brightnessSeekBar"
             android:layout_marginTop="26dp"
-            android:textSize="18sp"
+            android:text="Cosine"
             android:textColor="@color/black"
-            android:text="Cosine"/>
+            android:textSize="18sp" />
 
         <SeekBar
             android:id="@+id/speedSeekBar"
@@ -160,8 +158,6 @@
             android:layout_below="@+id/speedTextView"
             android:layout_marginTop="5dp"
             android:max="100"
-            android:progress="26"/>
-
+            android:progress="26" />
     </RelativeLayout>
-
 </RelativeLayout>
