--- a/app/src/main/res/layout/fragment_stick.xml
+++ b/app/src/main/res/layout/fragment_stick.xml
@@ -143,7 +143,7 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <GridView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/stickPatternsGridView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -152,11 +152,6 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="10dp"
-        android:columnWidth="100dp"
-        android:horizontalSpacing="5dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="5dp"
+        android:clipToPadding="false"
         tools:listitem="@layout/item_stick_pattern" />
-
 </RelativeLayout>
