--- a/app/src/main/res/layout/item_color_pattern.xml
+++ b/app/src/main/res/layout/item_color_pattern.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginBottom="15dp">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/colorPatternMaterialButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
         android:layout_centerInParent="true"
         android:backgroundTint="@color/white"
         android:insetLeft="0dp"
