--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -62,7 +62,25 @@
         android:textSize="26sp"
         tools:text="SpaceStickWifi" />
 
+    <Button
+        android:id="@+id/syncButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/checkConnectionCardView"
+        android:layout_centerHorizontal="true"
+        android:text="sync" />
+
+    <Button
+        android:id="@+id/syncModeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/checkConnectionCardView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="26dp"
+        android:text="sync mode" />
+
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/checkConnectionCardView"
         android:layout_width="154dp"
         android:layout_height="154dp"
         android:layout_alignParentBottom="true"
@@ -77,7 +95,6 @@
         app:iconPadding="0dp"
         app:iconSize="24dp"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded">
-
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/checkConnectionButton"
